tests/ui/attributes/mixed_export_name_and_no_mangle.stderr
error: the attribute `export_name` may not be used in combination with `no_mangle`
  --> $DIR/mixed_export_name_and_no_mangle.rs:5:1
   |
LL | #[export_name = "foo"]
   | ^^^^^^^^^^^^^^^^^^^^^^ `export_name` takes precedence
   |
note: the `no_mangle` attribute is ignored
  --> $DIR/mixed_export_name_and_no_mangle.rs:4:1
   |
LL | #[no_mangle]
   | ^^^^^^^^^^^^
note: the lint level is defined here
  --> $DIR/mixed_export_name_and_no_mangle.rs:1:9
   |
LL | #![deny(mixed_export_name_and_no_mangle)]
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
help: remove the `no_mangle` attribute
   |
LL - #[no_mangle]
   |

error: aborting due to 1 previous error

